ConcernsCaseWork/ConcernsCaseWork/wwwroot/src/css/_extra.scss
/* ... */
.trainees-table {
  border-top: 1px solid $govuk-border-colour;

  &__name-cell {
	font-weight: bold;
	padding-left: 5px;
  }

  &__dob {
	color: govuk-colour("mid-grey");
  }

  &__course-type {
	color: govuk-colour("mid-grey");
  }
}

.trainee-count {
  font-weight: bold;
  font-size: 1.4em;
}

.trainee-confirmation-panel {
  text-align: left;
  margin-bottom: 40px;

  &__check {
	border-radius: 50%;
	width: 50px;
	height: 40px;
	background-color: #FFF;
	color: govuk-colour("green");
	font-size: 25px;
	text-align: center;
	padding-top: 10px;
	float: left;
	margin: 0px 20px;
  }

  &__content {
	float: left;
	width: 80%;
  }

  &__emphasis {
	font-weight: bold;
  }
}

.confirmation-next-button {
  margin-right: 20px;
}

.align-right {
  text-align: right;
  float: right;
}

/// RAG rating tags ///

.ragtag {
  text-align: center;
  text-transform: none;
  color: #000;
  padding: 5px 10px;

  &__redplus {
	color: rgb(240, 240,240);
	background-color: #9c1618;
  }

  &__red {
	background-color: #e77375;
  }

  &__redamber {
	background: linear-gradient(90deg,#e77375 39.5%,#f89360 39.5%);
  }

  &__ambergreen {
	background: linear-gradient(90deg,#f89360 50.5%, #2bbf7a 50.5%);
  }

  &__amber {
	background-color: #f89360;
  }
  
  &__green {
	background-color:#2bbf7a;
  }

  &__grey {
	background-color:#d3d3d3;
  }

}

/// Accordion tweaks ///

.fitContent {
  width:fit-content;
}

.govuk-accordion__section-heading, .govuk-accordion__section-button {
  font-size:19px;
}

.js-enabled .govuk-accordion__controls{
  visibility: hidden;
  height: 0;
}

.summary-list-margin-0 {
  margin-bottom: -1px;
}

/// Tables ///

.govuk-table__header, .govuk-table__cell {
  padding: 10px;
}

.govuk-table__header__cases, .govuk-table__cell__cases {
  vertical-align: middle;
  padding: 10px;
  text-align: inherit;
}

.govuk-table__header__right{
  text-align: right;
}

.govuk-table__header:last-child, .govuk-table__cell:last-child{
  padding-right: 10px;
}

.govuk-table__header.govuk-table__header__width_4 {
  width: 4em;
}

.govuk-table__header.govuk-table__header__width_6 {
  width: 6em;
}

.govuk-table__header.govuk-table__header__width_8 {
  width: 8em;
}

.govuk-table__header.govuk-table__header__width_10 {
  width: 10em;
}

.govuk-table__header.govuk-table__header__width_15 {
  width: 15em;
}

.govuk-table__header.govuk-table__header__width_30 {
  width: 30em;
}

.govuk-table__head{
  background-color:#f2f5f7;
}

.tr__large {
  height: 60px;
}

/// Timeline ///

.timeline-action-list li{
  margin: 10px 0;
}

.timeline-action{
  line-height: 1;
  text-align: left;
  font-size: 19px;
  text-decoration: none;
  padding: 8px 10px;
  background-color: transparent;
  border: 1px solid transparent;
  cursor: pointer;
}

.timeline-action:active {
  top: 2px;
}

.timeline-action:hover {
  background-color: #D2E2F1;
}
.timeline-action:focus {
  background-color: #ffdd00;
  box-shadow: 0 2px 0 #0b0c0c;
}

/// ///

.float{
  &__right {
	float: right;
  }
}

.flexalign__right {
  flex-direction: row-reverse;
  margin-bottom: -45px;
}

.govuk-textarea {
  padding: 10px;
}
// -- //

.govuk-button--nikos {
  margin-top: 0;
  margin-bottom: 12px;
  margin-left: 43px;
  border: 2px solid transparent;
  border-radius: 0;
  color: #ffffff;
  background-color: #00703c;
  box-shadow: 0 2px 0 #002d18;
  text-align: center;
  vertical-align: top;
  cursor: pointer;
  -webkit-appearance: none;
}

.status-box {
  background-color: #f8f8f8;
  padding: 20px;
}

.app-sub-navigation {
  margin-bottom: 40px;
}

.app-sub-navigation__list {
  font-size: 0;
  list-style: none;
  margin: 0;
  padding: 0;
}

@media (min-width: 23.4375em) {
  .app-sub-navigation__list {
	box-shadow: inset 0 -1px 0 #b1b4b6;
	width: 100%;
  }
}

.app-sub-navigation__item {
  font-family: "GDS Transport", arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  box-shadow: inset 0 -1px 0 #b1b4b6;
  display: block;
  margin-top: -1px;
}

@media print {
  .app-sub-navigation__item {
	font-family: sans-serif;
  }
}

@media (min-width: 40.0625em) {
  .app-sub-navigation__item {
	font-size: 19px;
	line-height: 1.31579;
  }
}

@media print {
  .app-sub-navigation__item {
	font-size: 14pt;
	line-height: 1.15;
  }
}

.app-sub-navigation__item:last-child {
  box-shadow: none;
}

@media (min-width: 23.4375em) {
  .app-sub-navigation__item {
	box-shadow: none;
	display: inline-block;
	margin-right: 20px;
	margin-top: 0;
  }
}

.app-sub-navigation__link {
  font-family: "GDS Transport", arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  padding-top: 12px;
  padding-bottom: 17px;
  padding-left: 15px;
  text-decoration: none;
  position: relative;
  font-weight: bold;
}

@media print {
  .app-sub-navigation__link {
	font-family: sans-serif;
  }
}

.app-sub-navigation__link:focus {
  outline: 3px solid transparent;
  color: #0b0c0c;
  background-color: #ffdd00;
  box-shadow: 0 -2px #ffdd00, 0 4px #0b0c0c;
  text-decoration: none;
}

.app-sub-navigation__link:link {
  color: #1d70b8;
}

.app-sub-navigation__link:visited {
  color: #4c2c92;
}

.app-sub-navigation__link:hover {
  color: #003078;
}

.app-sub-navigation__link:active {
  color: #0b0c0c;
}

.app-sub-navigation__link:focus {
  color: #0b0c0c;
}

@media (min-width: 23.4375em) {
  .app-sub-navigation__link {
	padding-left: 0;
  }
}

.app-sub-navigation__link:link,
.app-sub-navigation__link:visited {
  color: #1d70b8;
}

.app-sub-navigation__link:hover {
  color: #0b0c0c;
}

.app-sub-navigation__link:focus {
  color: #0b0c0c;
  position: relative;
  box-shadow: none;
}

.app-sub-navigation__link:focus:before {
  background-color: #0b0c0c;
  content: "";
  display: block;
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 5px;
}
/* ... */

